# Academic-Governance-System

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  Dockerfile  README.md  app.py  bandit_results.json  config.py  docker-compose.staging.yml  docker-compose.yml  git_diff_report.txt  git_diff_report_utf8.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.txt  tailwind.config.js  wsgi.py
.claude/: settings.local.json
academic_governance/: __init__.py  config.py  db.py  models.py
deployment/: backup.sh  gunicorn.conf.py  nginx.conf  systemd.service
docs/: architecture.md  developer-team-report.md  live-setup-checklist.md  operations-runbook.md  production-deployment.md  secret-rotation.md
migrations/: env.py
scripts/: download_stitch.py  identify_stitch.py  merge_ui.py  seed_data.py  validate_integration.py
templates/: academic_feedback.html  admin_at_risk.html  admin_attendance.html  admin_create_students.html  admin_dashboard.html  admin_labs.html  admin_labs_index.html  admin_labs_layout.html  admin_marks.html  admin_materials.html  admin_notifications.html  admin_timetable.html  advanced_lab_dashboard.html  applications.html  attendance_module.html  attendance_overview.html  base.html  career_paths.html  chatbot_page.html  chatbot_widget.html  complaint_confirmation.html  course_materials.html  course_plan_module.html  course_plan_overview.html  dashboard.html  drives.html  error.html  feedback_success.html  index.html  login.html  marks_module.html  marks_overview.html  placement_applications.html  placement_base.html  placement_career.html  placement_drives.html  placement_profile.html  raise_complaint.html  student_labs_index.html  student_labs_layout.html  (+4 more)
tests/: conftest.py  helpers.py  postgres_test_utils.py  test_academic_lab_services.py  test_labs.py  (+20 more)
(+43 files in other folders)
