[project]
name = "academic-governance-system"
version = "1.0.0"
description = "Flask-based campus governance portal for complaint handling, academic tracking, notifications, lab management, and placement workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.3",
  "Flask-Migrate==4.1.0",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-WTF==1.2.2",
  "alembic==1.16.5",
  "authlib>=1.6.11",
  "gunicorn==23.0.0",
  "psycopg[binary]==3.2.10",
  "python-dotenv>=1.2.2",
  "requests==2.32.4",
  "sentry-sdk[flask]",
  "SQLAlchemy==2.0.43",
  "werkzeug>=3.1.6",
  "ruff>=0.15.6",
  "pip-audit",
  "bandit>=1.9.4",
  "google-generativeai>=0.8.6",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.uv]
package = false

[tool.pyright]
include = ["academic_governance", "tests"]
venvPath = "."
venv = "venv"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"scripts/**/*.py" = ["E402"]
"migrations/**/*.py" = ["E402"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
